test/files/neg/byname-implicits-18.check
byname-implicits-18.scala:52: error: diverging implicit expansion for type Test.Tc[Test.Bootstrap[Int]]
starting with method tcGen in object Tc
  implicitly[Tc[Bootstrap[Int]]]
            ^
1 error
